# wmi-rs-nodejs

./: Cargo.toml  LICENSE  README-simple.md  README.md  example-object-api.js  example.js  index.js  package.json  wmi-nodejs.win32-x64-msvc.node
src/: lib.rs
