[package]
name = "wmi-nodejs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Node.js bindings for wmi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.16"
wmi = { path = "../wmi-rs", default-features = false, features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2.1" 